# satellite-tracker

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
conf/: acs3.json  iss.json  satellite-tracker.json  sj_16-02.json
tracker/: __init__.py  model.py  trajgen.py  utils.py
